<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">DtiCodeChallenge</string>

    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="title_activity_home" translatable="false">Home</string>
    <string name="title_activity_register" translatable="false">Register</string>

    <string name="prompt_username" translatable="false">Username</string>
    <string name="prompt_password" translatable="false">Password</string>

    <string name="action_sign_in" translatable="false">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="action_submit_form" translatable="false">Register</string>
    <string name="action_register" translatable="false">Create account</string>

    <string name="invalid_username" translatable="false">Username must be between 5 and 60</string>
    <string name="invalid_password" translatable="false">Password must be between 3 to 1024 characters</string>
    <string name="or_label" translatable="false">or</string>
    <string name="welcome_message" translatable="false">Hi, <b>%s</b>!\nLogin successfully\n\n\nWelcome.</string>
    <string name="server_unavailable">Service is currently unavailable. Try again later.</string>
</resources>